[package]
name = "bilby-encoder-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmdcolin/bilby-encoder-rs"
description = "Creates a machine learning encoding of RNA-seq BAM data"


[dependencies]
clap = { version = "4", features = ["derive"] }
rust-htslib = "0"
